--- a/fitnessapp/templates/gallery.html
+++ b/fitnessapp/templates/gallery.html
@@ -202,7 +202,7 @@
         </div>
         <div class="container border-top border-dark pt-5">
             <p class="m-0 text-center text-white">
-                Designed with &#9829; by <a class="text-white font-weight-bold" href="https://webmakers.co.in" target="_blank">WebMakers</a>
+                Designed with &#9829; by <a class="text-white font-weight-bold" href="https://www.webmakers.co.in" target="_blank">WebMakers</a>
             </p>
         </div>
     </div>
