--- a/fitnessapp/templates/index.html
+++ b/fitnessapp/templates/index.html
@@ -141,7 +141,7 @@
                     <i class="flaticon-training display-3 text-dnager mr-3"></i>
                     <div class="">
                         <h2 class="text-white mb-3">Progression</h2>
-                        <p>The principle of progression states that as your body adapts to your exercise routine, you have to gradually 
+                        <p>The principle of progression states that as your body adapts to your exercise routine, you should gradually 
                             increase the duration or intensity to see growth.
                         </p>
                     </div>
@@ -178,7 +178,7 @@
     <div class="container feature pt-5">
         <div class="d-flex flex-column text-center mb-5">
             <h4 class="text-danger font-weight-bold">Why Choose Us?</h4>
-            <h4 class="display-4 font-weight-bold">Benifits of Joining Our GYM</h4>
+            <h4 class="display-4 font-weight-bold">Benefits of Joining Our GYM</h4>
         </div>
         <div class="row">
             <div class="col-md-6 mb-5">
@@ -201,7 +201,7 @@
                     </div>
                     <div class="col-sm-7">
                         <h4 class="font-weight-bold">Online training</h4>
-                        <p>We provide online classes as well on an optional basis.</p>
+                        <p>We provide online classes as well, on an optional basis.</p>
                     </div>
                 </div>
             </div>
@@ -213,7 +213,7 @@
                     </div>
                     <div class="col-sm-7">
                         <h4 class="font-weight-bold">Free WiFi</h4>
-                        <p>We provide free Wifi which encourages people to stick at their health plan, 
+                        <p>We provide free Wifi which encourages people to stick to their health plan, 
                             help boost your social media profile and much more.</p>
                     </div>
                 </div>
@@ -226,7 +226,7 @@
                     </div>
                     <div class="col-sm-7">
                         <h4 class="font-weight-bold">Constant Support</h4>
-                        <p>We provide flexible schedule & format and nutritional advices.</p>
+                        <p>We provide flexible schedule, format & nutritional advices.</p>
                     </div>
                 </div>
             </div>
