--- a/fitnessapp/templates/index.html
+++ b/fitnessapp/templates/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Bash Fitness</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free Website Template" name="keywords">
-    <meta content="Free Website Template" name="description">
+    <meta content="Gym & Fitness center" name="keywords">
+    <meta content="Gym & Fitness center" name="description">
 
     <!-- Favicon -->
     <link href="./static/img/favicon.png" rel="icon">
